# Open-SURFEX

./: CMakeLists.txt  README.md
MY_RUN/FORCING/: prepare_forcing.bash
cmake/: Findgrib_api.cmake
conf/: profile_surfex.ihm
conf/post/: confdollar_turing_default
src/: Makefile  Makefile.SURFEX.mk  Rules.LXgfortran.mk  Rules.LXifort.mk  configure
src/ASSIM/: add_noise.F90  assim_inland_watern.F90  assim_isba_update_snow.F90  assim_isban.F90  assim_nature_isba_ekf.F90  assim_nature_isba_enkf.F90  assim_nature_isba_oi.F90  assim_naturen.F90  assim_sean.F90  assim_set_sst.F90  assim_surf_atmn.F90  assim_tebn.F90  assim_townn.F90  choldc.F90  cholsl.F90  default_assim.F90  get_iok_assim.F90  ini_assim.F90  inverse_matrix.F90  modd_assim.F90  mode_ekf.F90  mode_random.F90  modn_assim.F90  oi_acsolw.F90  oi_bc_soil_moisture.F90  oi_cacsts.F90  oi_cavegi.F90  oi_control.F90  oi_fctveg.F90  oi_hor_extrapol_surf.F90  oi_jacobians.F90  oi_kalman_gain.F90  oi_latlon_conf_proj.F90  oi_tsl.F90  outer_product.F90  read_assim_conf.F90  read_namelists_assim.F90  soda.F90  trans_chaine.F90
src/FORC/: my_forc_alp_for_0203.F90  my_forc_alqueva0206.F90  my_forc_cdp9697.F90  my_forc_hapex.F90  my_forc_ma01.F90  my_forc_me93.F90  my_forc_plm.F90  my_forc_safran.F90  my_forc_vl92.F90  my_forcing.F90  offline.F90  open_close_bin_asc_forc.F90  pre_input_experiment.F90  write_netcdf.F90
src/OFFLIN/: close_aux_io_surf_lfi.F90  close_aux_io_surf_nc.F90  close_file_lfi.F90  close_file_ol.F90  close_filein_ol.F90  close_fileout_ol.F90  close_namelist_lfi.F90  close_namelist_nc.F90  (+87 more)
(+1402 files in other folders)
